--- a/src/App.scss
+++ b/src/App.scss
@@ -106,11 +106,16 @@ html {
     position: fixed;
     width: calc(100% - 34rem);
     left: 32rem;
-
+    z-index: 100;
     .icon-cont {
       padding: 0 1.5rem;
       color: rgb(170, 170, 170);
     }
+    // .filter-icon {
+    //   .icon {
+    //     //color: #fff;
+    //   }
+    // }
     input {
       padding: 2rem 2rem 2rem 0;
       font-size: 2rem;
@@ -142,10 +147,11 @@ html {
     grid-gap: 2rem;
 
     .note {
-      padding: 3rem 2rem;
+      padding: 3rem 2rem 10rem 2rem;
       background: #fff;
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
       border-radius: 5px;
+      position: relative;
       .upper {
         display: flex;
         align-items: center;
@@ -156,6 +162,9 @@ html {
           color: #666;
           font-weight: 800;
           width: calc(100% - 6rem);
+          text-overflow: ellipsis;
+          -webkit-line-clamp: 1;
+          line-clamp: 1;
         }
         .note-actions {
           display: flex;
@@ -182,10 +191,13 @@ html {
           line-height: 1.6;
           color: rgb(150, 150, 150);
           font-weight: 500;
-          margin-bottom: 3rem;
+          text-overflow: ellipsis;
+          -webkit-line-clamp: 3;
+          line-clamp: 3;
         }
         .time-info {
           text-align: right;
+
           .time {
             background: rgb(190, 190, 190);
             font-weight: bold;
@@ -193,6 +205,9 @@ html {
             color: #fff;
             padding: 0.5rem 2rem;
             border-radius: 50px;
+            position: absolute;
+            right: 3rem;
+            bottom: 3rem;
           }
         }
       }
@@ -207,6 +222,7 @@ html {
   left: 0;
   top: 0;
   height: 100%;
+  z-index: 1000;
   .form {
     background: #fff;
     padding: 5rem;
@@ -308,6 +324,40 @@ select:focus {
   .main-app {
     .notes {
       grid-template-columns: 1fr 1fr 1fr;
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .sidebar {
+    display: none;
+  }
+  .main-app {
+    margin-left: 0;
+    .search {
+      width: calc(100% - 4rem);
+      left: 2rem;
+    }
+    .notes {
+      grid-template-columns: 1fr 1fr;
+    }
+   
+  }
+  .form-cont {
+   
+    .form {
+      top: 50%;
+      width: 90%;
+      max-width: unset;
+      padding: 4rem 2rem;
+    }
+  }
+}
+
+@media (max-width: 700px) {
+  .main-app {
+    .notes {
+      grid-template-columns: 1fr;
     }
   }
 }
